# fpga-hello-world

./: .gitignore  .gitmodules  LICENSE  README.md  SETUP.md  mise.toml  requirements.txt
.gemini/: settings.json
.github/workflows/: build-and-publish-docker-image-template.yaml  docker-image-ci.yaml  fpga-ci.yaml  verilog-ci.yaml
.work-items/fpga-aws-hello-world/: design.md  task.md  user-story.md
.work-items/fpga-hello-world-aws/: design.md  task.md  user-story.md
.work-items/fpga-hello-world-github/: design.md  task.md  user-story.md
.work-items/fpga-visaul-workflow-output/: architecture.md  design.md  task.md  user-story.md
.work-items/migrate-from-make-to-mise/: design.md  task.md
.work-items/split-up-dev-images/: design.md  task.md  user-story.md
.work-items/system-verilog-hello-world/: design.md  task.md  user-story.md
.work-items/vhdl-hello-world/: design.md  task.md  user-story.md
docker/: build_all_dev_images.sh  build_images.sh
docker/fpga-base-ci-env/: Dockerfile
docker/fpga-base-dev-env/: Dockerfile
docker/fpga-dev-env/: .dockerignore  Dockerfile
docker/systemverilog-dev-env/: Dockerfile
docker/verilog-dev-env/: Dockerfile
docker/vhdl-dev-env/: Dockerfile  build_and_test.sh
docs/decisions/: 0001-single-dev-container.md
scripts/: .gitignore  download_oss_cad_suite_static.sh  install_oss_cad_suite.sh
src/waveform_assert/: .gitignore  Makefile  pyproject.toml
src/waveform_exporter/: Makefile  pyproject.toml
src/waveform_exporter/tests/: test_backends.py
src/waveform_exporter/waveform_exporter/: backends.py  exporter.py
(+15 files in other folders)
